# mimo-paste

./: mimo-paste.cabal  style.css
debian/: Debianize.hs  changelog
src/: App.hs  Embeddable.hs  Parsable.hs  Spec.hs  Stage0.hs  Stage1Def.hs  Stage2.hs  Stage2Def.hs  Stage2aDef.hs  Stage2bDef.hs  Tests.hs  Types.hs  Updatable.hs  View.hs
