Name:               mimo-paste
Version:            1.0
Synopsis:           Simple paste app for MIMO
Homepage:           https://github.com/seereason/mimo-paste
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           Web
Stability:          experimental
Build-Type:         Custom
Cabal-Version:      >=1.16

flag local-mimo
  Description: Use local source for mimo instead of installed library
  Default: False
  Manual: True

flag local-th-path
  Description: Use local source for th-path, th-context, and th-typegraph instead of installed libraries
  Default: False
  Manual: True

Executable paste-server
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-Options: -O2 -threaded -Wall
  Other-Modules:
    Stage1Def
    Stage2aDef
    Stage2bDef
  Build-Depends:
      base < 5,
      Cabal,
      containers,
      data-default,
      happstack-authenticate,
      happstack-foundation,
      hslogger,
      hsp,
      lens,
      mtl,
      mtl-unleashed,
      process,
      seereason-ports,
      template-haskell,
      text,
      th-context,
      th-desugar,
      th-path,
      th-typegraph,
      time,
      time-locale-compat
  if flag(local-mimo)
    Hs-Source-Dirs: ../mimo, ../mimo/Common
    Main-Is: ../mimo/Exec/Server.hs
    Build-Depends:
      acid-state,
      applicative-extras,
      clckwrks,
      data-default-instances-base,
      data-default-instances-containers,
      directory,
      filepath,
      happstack-jmacro,
      haskell-src-exts,
      ixset,
      jmacro,
      reform,
      safecopy,
      syb,
      th-orphans,
      unix,
      uuid,
      uuid-orphans,
      uuid-types,
      web-routes
  else
    Hs-Source-Dirs: /usr/share/mimo/Common
    Main-Is: /usr/share/mimo/Exec/Server.hs
    Build-Depends: mimo
  if flag(local-th-path)
    Hs-Source-Dirs: ../th-path, ../th-context, ../th-typegraph
    Build-Depends: base-compat, th-kinds, ListLike, set-extra
  else
    Build-Depends:
      th-context,
      th-path,
      th-typegraph >= 0.29

Executable paste-backups
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-Options: -O2 -threaded -Wall
  Build-Depends:
    archive,
    base < 5,
    Cabal,
    containers,
    data-default,
    happstack-authenticate,
    happstack-foundation,
    hsp,
    lens,
    mtl,
    mtl-unleashed,
    network-uri >= 2.6,
    safecopy,
    seereason-ports,
    syb,
    template-haskell,
    text,
    th-context,
    th-desugar,
    th-orphans,
    th-path,
    th-typegraph,
    time,
    time-locale-compat
  if flag(local-mimo)
    Main-Is: ../../mimo/Exec/Backups.hs
    Hs-Source-Dirs: ../mimo, ../mimo/Common
    Build-Depends:
      acid-state,
      applicative-extras,
      clckwrks,
      data-default-instances-base,
      data-default-instances-containers,
      directory,
      filepath,
      haskell-src-exts,
      ixset,
      reform,
      unix,
      uuid-orphans,
      uuid-types,
      web-routes
  else
    Main-Is: /usr/share/mimo/Exec/Backups.hs
    Build-Depends: mimo
    Hs-Source-Dirs: /usr/share/mimo/Common
  if flag(local-th-path)
    Hs-Source-Dirs: ../th-path, ../th-context, ../th-typegraph
    Build-Depends: base-compat, th-kinds, ListLike, set-extra
  else
    Build-Depends:
      th-context,
      th-path,
      th-typegraph >= 0.29

test-suite mimo-tests
  Buildable: False
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  Main-Is: Tests.hs
  Build-Depends:
    base < 5,
    Cabal,
    containers,
    data-default,
    ghc-prim,
    happstack-authenticate,
    happstack-foundation,
    HUnit,
    lens,
    mimo,
    mtl,
    seereason-ports,
    set-extra,
    template-haskell,
    text,
    th-context,
    th-orphans,
    th-path,
    th-typegraph,
    time
